--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
-    <div class="header"> </div>
+    <div class="header">Information about me :)</div>
 
   
 
