--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
+    <header class="header">Information about me :)</header>
     <div class="header">Information about me :)</div>
 
   
