--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,11 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
-    <header class="header">Information about me :)</header>
-    <div class="header">Information about me :)</div>
+    <header class="header">Information about me :)
+      <h1>My Name</h1>
+
+    </header>
+    
 
   
 
