--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 <body>
     <header class="header">Information about me :)
       <h1>My Name</h1>
+      <h2>software developer</h2>
 
     </header>
     
