--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,10 @@
       <h2>software developer</h2>
 
     </header>
+    <div class="tagline">
+      <h3>Learn More About Me</h3>
+      <p>This is information about me)</p>
+    </div>
     
 
   
