--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,10 @@
       <h3>Learn More About Me</h3>
       <p>This is information about me)</p>
     </div>
+    <div class="skills">
+      <h3>my skills</h3>
+      <p>I enjoy writing front-end code with these technologies</p>
+    </div>
     
 
   
