--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,10 @@
         <li>JavaScript</li>
       </ul>
     </div>
+    <div class="contact">
+      <h3>contact me</h3>
+      <p>my number</p>
+    </div>
     
 
   
