--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
     <div class="contact">
       <h3>contact me</h3>
       <p>my number</p>
+      <a href="https://github.com/McBand/HTMLPortfolioProject/tree/master/src" target="_blanc">twiter</a>
     </div>
     
 
