--- a/src/index.html
+++ b/src/index.html
@@ -27,12 +27,8 @@
     </div>
     <div class="contact">
       <h3>contact me</h3>
-      <p>my number</p>
+      <p>my number <a href="https://github.com/McBand/HTMLPortfolioProject/tree/master/src" target="_blanc">twiter</a></p>
       <a href="https://github.com/McBand/HTMLPortfolioProject/tree/master/src" target="_blanc">twiter</a>
     </div>
-    
-
-  
-
 </body>
 </html>
